crates/toml/tests/snapshots/invalid/datetime/trailing-x.stderr
TOML parse error at line 1, column 6
  |
1 | sign=2020-01-01x
  |      ^^^^^^^^^^^
invalid date-time, expected `T` between date and time
